# python-project-template

./: .pre-commit-config.yaml  .windsurfrules  Makefile  README.md  pyproject.toml
.github/workflows/: badges.yml  ci.yml
src/python_project_template/: __init__.py
tests/: test_main.py
