[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Graf", email = "grafdavid@me.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_project_template"]
