[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Graf", email = "grafdavid@me.com" }
]
requires-python = ">=3.12.8"
dependencies = []

[project.scripts]
python-project-template = "python_project_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
]
